		
		
	* New feature: 
		Now can add a site-wide footer for tracking codes.
		(2009-09-30 - Adam Franco)
		(reported by achapin)
		
	* Bug Fix: 
		CourseManagement: Update to course format for Midd's new LDAP class-group
		structure. 
		(2009-09-30 - Adam Franco)
		
	* Bug Fix: 
		Participation: Now doesn't die when a group is an administrator.
		(2009-09-30 - Adam Franco)
		
	* Bug Fix: 
		Themes: added getExtension() method to theme images in preparation for
		harmoni-1.10.0. 
		(2009-09-30 - Adam Franco)
	



v. 2.2.10.2 (2009-06-08)
----------------------------------------------------
This release of Segue fixes a bug in the standard course template. 

----

 Upgrades from versions prior to 2.2.9.0 require running system updaters
located under Admin Tools --> Segue Updates. 

----

 This Segue release uses Harmoni 1.9.5 and Polyphony 1.5.2.
		
		
	* Bug Fix: 
		site-templates: Fixed bug in new standard course site-templates.
		(2009-06-07 - Alex Chapin)
	



v. 2.2.10.1 (2009-06-08)
----------------------------------------------------
This release of Segue includes refinements to the roles UI, participation plugin,
and adds a number of new site templates. 

----

 Upgrades from versions prior to 2.2.9.0 require running system updaters
located under Admin Tools --> Segue Updates. 

----

 This Segue release uses Harmoni 1.9.5 and Polyphony 1.5.2.
		
		
	* Change: 
		site-templates: Created new site-templates including a standard course
		template in English, Arabic, Chinese, Japanese, French, Spanish, German and
		Portuguese. 
		(2009-06-07 - Alex Chapin)		
		
	* Change: 
		Audio and File plugins: these plugins now process and display text-templates
		in their captions.
		(2009-06-07 - Alex Chapin)		
		
	* Change: 
		Participation plugin: plugin now displays list of Site Administrators.
		(2009-04-15 - Alex Chapin)
		
	* Change: 
		Roles UI: Site members now listed in initial roles UI
		(2009-04-15 - Alex Chapin)
		
	* Change: 