@@ -43,6 +43,8 @@
 		<li>
 <b>Bug Fix:</b> Participation: Now doesn't die when a group is an administrator. (<em>2009-09-30 - Adam Franco</em>)</li>
 		<li>
+<b>Bug Fix:</b> Participation: now doesn't die if no display name is available. (<em>2009-09-30 - Adam Franco</em>)</li>
+		<li>
 <b>Bug Fix:</b> Themes: added getExtension() method to theme images in preparation for harmoni-1.10.0. (<em>2009-09-30 - Adam Franco</em>)</li>
 	</ul>
 <br><h2>Version 2.2.10.2</h2>
